--- a/Wright.styles.css
+++ b/Wright.styles.css
@@ -1,7 +1,54 @@
-/* YOUR NAME GOES HERE */
+/* CSS by Alex Wright */
+
 
 /* --------------- ADD CSS RESET TO THE FILE HERE --------------- */
-
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126
+License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 
 
 /* ----- AUTOPREFIXER FOR VS CODE WAS USED FOR VENDOR PREFIXES ----- */
@@ -31,6 +78,11 @@
 
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
 /* --------------- BEGIN USER PREFERS DARK COLOR SCHEME QUERY --------------- */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: var(--dark-gray);
+    }
+}
 
 /* CHANGE THE BODY'S BACKGROUND COLOR TO THE DARK GRAY IF THE USER PREFERS DARK MODE */
 
@@ -91,12 +143,16 @@ footer .icon{
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
-    @-webkit-keyframes icon-animation {
-        0% { font-variation-settings: "TIME" 1; }
+@media (prefers-reduced-motion) {
+    .icon {
+        @-webkit-keyframes icon-animation {
+            0% { font-variation-settings: "TIME" 1; }
+        }
+        @keyframes icon-animation {
+            0% { font-variation-settings: "TIME" 1; }
+        }
     }
-    @keyframes icon-animation {
-        0% { font-variation-settings: "TIME" 1; }
-    }
+}
 /* --------------- END USER PREFERS REDUCED MOTION QUERY --------------- */
 
 
@@ -149,8 +205,11 @@ img{
 
 
 /* ---------- SMALL SCREEN STYLES ---------- */
+@media only screen and (min-width: 550px) {
+
+
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-    /* header, footer{
+    header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -175,14 +234,15 @@ img{
     img{
         width: 200px;
         max-width: 200px;
-    } */
+    }
 /* --------------- END SMALL SCREEN SIZES --------------- */
-
+}
 
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
+@media only screen and (min-width: 800px) {
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-    /* header, footer{
+    header, footer{
         background-color: var(--black);
         color: var(--white);
     }   
@@ -207,14 +267,15 @@ img{
     #seven{
         grid-column: 3/4;
         grid-row: 3/5;
-    } */
+    }
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
-
+}
 
 
 /* ---------- LARGE SCREEN STYLES ---------- */
+@media only screen and (min-width: 1050px) {
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+    header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -245,9 +306,9 @@ img{
 
     #seven, #eight{
         grid-row: 3/4;
-    } */
+    }
 /* --------------- END LARGE SCREEN SIZES --------------- */
-
+}
 
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
@@ -261,8 +322,9 @@ img{
 
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
+@media only screen and (min-width: 1280px) {
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+    header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -327,5 +389,6 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } */
+    }
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
+}
